--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,5 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.hbm2ddl.auto=update
 
 spring.jpa.properties.hibernate.format_sql=true
+
+server.port=80
