--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,4 +10,8 @@ spring.jpa.show-sql=true
 
 spring.jpa.hibernate.hbm2ddl.auto=update
 
+spring.jpa.hibernate.naming.physical-strategy = org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
 spring.jpa.properties.hibernate.format_sql=true
+
+spring.profiles.include=oauth
